monitoring/01-prometheus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitor
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: monitor
spec:
  selector:
      matchLabels:
        app: prometheus # has to match .spec.template.metadata.labels
  serviceName: "prometheus-svc"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9913'
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus:v2.9.0
        imagePullPolicy: "IfNotPresent"
        args:
        - --config.file=/etc/config/prometheus.yml
        - --storage.tsdb.path=/prometheus-data
        - --web.console.libraries=/etc/prometheus/console_libraries
        - --web.console.templates=/etc/prometheus/consoles
        - --web.enable-lifecycle
        ports:
          - containerPort: 9090
            protocol: TCP
        resources:
          requests:
            memory: "256Mi"
          limits:
            cpu: "0.2"
            memory: "1Gi"
        readinessProbe:
          httpGet:
            path: /-/ready
            port: 9090
          initialDelaySeconds: 30
          timeoutSeconds: 30
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: 9090
          initialDelaySeconds: 30
          timeoutSeconds: 30
        volumeMounts:
          - name: prometheus-storage
            mountPath: /etc/config
          - name: prometheus-storage
            mountPath: /prometheus-data
      volumes:
        - name: config-volume
          configMap:
            name: prometheus
        - name: prometheus-data
          emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: prometheus-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: local-storage
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: monitor
  labels:
    name: prometheus
spec:
  ports:
    - name: "prometheus"
      protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    name: prometheus
  sessionAffinity: None
  type: ClusterIP
