monitoring/02-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-server
  namespace: coletaconsciente
  labels:
    app: grafana-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-server
  template:
    metadata:
      labels:
        app: grafana-server
    spec:
      containers:
        - name: grafana-server
          image: grafana/grafana
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
            limits:
              cpu: "0.5"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-server-svc
  namespace: coletaconsciente
  labels:
    app: grafana-server
spec:
  type: ClusterIP
  selector:
    app: grafana-server
  ports:
    - port: 3000
      targetPort: 3000
